--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 PRICES_API='https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd'
 QUEUE_NAME=candles
-AMQP_SERVER=amqp://dev:admin@localhost:5672
+AMQP_SERVER=amqp://admin:admin@localhost:5672
