--- a/bitcoin-candle-api/.envexample
+++ b/bitcoin-candle-api/.envexample
@@ -3,3 +3,4 @@ AMQP_SERVE=amqp://admin@admin@localhost:5672
 QUEUE_NAME=candles
 SOCKET_EVENT_NAME=newCandle
 SOCKET_CLIENT_SERVER=http://localhost:8080
+MONGODB_CONNECTION_URL=mongodb://localhost/candles
