--- a/bitcoin-candle-api/package.json
+++ b/bitcoin-candle-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",    
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
