--- a/bitcoin-candle-api/package.json
+++ b/bitcoin-candle-api/package.json
@@ -1,7 +1,7 @@
 {  
   "name": "bitcoin-candle-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "test",    
     "dev": "nodemon --exec ts-node src/server.ts"
